--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toyhauler-auth-client",
-  "version": "0.0.1",
+  "version": "0.0.2-0",
   "description": "Typescript/node library for accessing the remote Toyhauler Auth API",
   "main": "src/AuthClient.js",
   "scripts": {
