--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/mfreydl/toyhauler-auth-client/issues"
   },
-  "homepage": "https://github.com/mfreydl/toyhauler-auth-client#readme"
+  "homepage": "https://github.com/mfreydl/toyhauler-auth-client#readme",
+  "dependencies": {
+    "axios": "^0.19.0",
+    "toyhauler-common": "0.0.1"
+  }
 }
