--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "toyhauler-auth-client",
   "version": "0.0.3-1",
   "description": "Typescript/node library for accessing the remote Toyhauler Auth API",
-  "main": "src/AuthClient.js",
+  "main": "bin/AuthClient.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
