--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "toyhauler-auth-client",
-  "version": "0.0.3-8",
+  "version": "0.0.3-9",
   "description": "Typescript/node library for accessing the remote Toyhauler Auth API",
   "main": "bin/AuthClient.js",
   "scripts": {
@@ -29,6 +29,6 @@
     "@types/comment-json": "^1.1.1",
     "axios": "^0.19.0",
     "comment-json": "^2.1.0",
-    "toyhauler-common": "0.0.1"
+    "toyhauler-common": "0.0.3-13"
   }
 }
